# CameraView

./: .gitignore  CMakeLists.txt  CameraView.vcxproj  CameraView.vcxproj.filters  README.md
MUCamSDK/Example for C#/: MUCamSampleForCSharp.sln
MUCamSDK/Example for C#/Motic.MUCam32.Net/: MUCam32API.cs  MUCamDef.cs  Motic.MUCam32.Net.csproj
MUCamSDK/Example for C#/Motic.MUCam32.Net/Properties/: AssemblyInfo.cs
MUCamSDK/Example for C#/Motic.MUCam32.Test/: Form1.Designer.cs  Form1.cs  Form1.resx  Motic.MUCam32.Test.csproj  Program.cs
MUCamSDK/Example for C#/Motic.MUCam32.Test/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MUCamSDK/Example for VC++/: MUCamExample.clw  MUCamExample.cpp  MUCamExample.h  MUCamExample.rc  MUCamExample.sln  MUCamExample.sln.old  MUCamExample.vcproj  MUCamExample.vcxproj  MUCamExample.vcxproj.filters  MUCamExampleDlg.cpp  MUCamExampleDlg.h  MoticUCamEx.h  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h
MUCamSDK/Example for VC++/res/: MUCamExample.rc2
MUCamSDK/inc/: MoticUCam.h
MUCamSDK/lib/x64/: MUCam32.lib  MUCam32Ex.lib
MUCamSDK/lib/x86/: MUCam32.lib  MUCam32Ex.lib
docs/: acceptance_checklist.md  architecture_decisions.md  architecture_uml.md  camera_field_verification.md  design_completion_audit.md  design_confirmation.md  design_index.md  design_review_report.md  image_processing_design.md  implementation_plan.md  implementation_progress.md  requirements_traceability.md  uml_gallery.md  uml_rendering.md
docs/uml/: README.md  calibration_activity.puml  calibration_sequence.puml  class_model.puml  component.puml  deployment.puml  edf_activity.puml  edf_sequence.puml  export_sequence.puml  fluorescence_fusion_activity.puml  fluorescence_fusion_sequence.puml  measurement_activity.puml  measurement_sequence.puml  measurement_tool_state.puml  package.puml  preview_sequence.puml  processing_job_state.puml  project_save_sequence.puml  session_state.puml  stitching_activity.puml  stitching_sequence.puml  use_case.puml
src/: MUCamApi.cpp  MUCamApi.h  main.cpp
src/app/: DiagnosticReportActions.cpp  DiagnosticReportActions.h  ExportActions.cpp  ExportActions.h  ProjectActions.cpp  ProjectActions.h  ProjectSessionRestorer.cpp  ProjectSessionRestorer.h
src/camera/: CameraControlStatusFormatter.cpp  CameraControlStatusFormatter.h  CameraDevice.h  CameraDeviceListFormatter.cpp  CameraDeviceListFormatter.h  CameraTelemetryFormatter.cpp  CameraTelemetryFormatter.h  FrameBuffer.cpp  FrameBuffer.h  ICameraDriver.h  MUCamCameraDriver.cpp  MUCamCameraDriver.h
src/domain/: CalibrationProfile.cpp  CalibrationProfile.h  Geometry.h  ImageFrame.h  Measurement.cpp  Measurement.h  MeasurementCollection.cpp  MeasurementCollection.h  MeasurementFormatter.cpp  MeasurementFormatter.h  MeasurementNameFormatter.cpp  MeasurementNameFormatter.h
src/imaging/: ChannelFusionEngine.cpp  ChannelFusionEngine.h  DyeLibrary.cpp  DyeLibrary.h  EdfProcessor.cpp  EdfProcessor.h  EdfStackListActions.cpp  EdfStackListActions.h  Fluorescence.h  FluorescenceChannelFactory.cpp  FluorescenceChannelFactory.h  FluorescenceChannelListActions.cpp  FluorescenceChannelListActions.h  FluorescenceChannelSettings.cpp  FluorescenceChannelSettings.h  FluorescenceChannelUpdater.cpp  FluorescenceChannelUpdater.h  FluorescenceFormatter.cpp  FluorescenceFormatter.h  HistogramCalculator.cpp  HistogramCalculator.h  ImageAdjuster.h  ImageRegistration.cpp  ImageRegistration.h  ImageStitcher.cpp  ImageStitcher.h  ImageViewport.cpp  ImageViewport.h  OverlayRenderer.cpp  OverlayRenderer.h  PreviewDisplayActions.cpp  PreviewDisplayActions.h  PreviewFrameComposer.cpp  PreviewFrameComposer.h  ProcessingBuildActions.cpp  ProcessingBuildActions.h  ProcessingJobExecutor.cpp  ProcessingJobExecutor.h  ProcessingJobState.cpp  ProcessingJobState.h  (+32 more)
src/platform/: FileDialog.cpp  FileDialog.h  TextInputParser.cpp  TextInputParser.h
src/storage/: DiagnosticReportBuilder.cpp  DiagnosticReportBuilder.h  ImageExporter.cpp  ImageExporter.h  MeasurementCsvExporter.cpp  MeasurementCsvExporter.h  ProjectDocument.h  ProjectRepository.cpp  ProjectRepository.h  ProjectSessionMapper.cpp  ProjectSessionMapper.h
src/ui/: CameraPanelActions.cpp  CameraPanelActions.h  ControlIds.h  DyeLibraryActions.cpp  DyeLibraryActions.h  DyeProfileFormParser.cpp  DyeProfileFormParser.h  DyeProfileFormPresenter.cpp  DyeProfileFormPresenter.h  FluorescenceChannelFormPresenter.cpp  FluorescenceChannelFormPresenter.h  FluorescenceDisplayActions.cpp  FluorescenceDisplayActions.h  HistogramRenderer.cpp  HistogramRenderer.h  MeasurementActionApplier.cpp  MeasurementActionApplier.h  MeasurementDisplayActions.cpp  MeasurementDisplayActions.h  MeasurementEditSession.cpp  MeasurementEditSession.h  MeasurementHitTester.cpp  MeasurementHitTester.h  MeasurementInteractionActions.cpp  MeasurementInteractionActions.h  MeasurementInteractionState.cpp  MeasurementInteractionState.h  MeasurementListActions.cpp  MeasurementListActions.h  MeasurementListSelection.cpp  MeasurementListSelection.h  MeasurementOverlayModelBuilder.cpp  MeasurementOverlayModelBuilder.h  MeasurementToolAvailability.cpp  MeasurementToolAvailability.h  MeasurementToolStartActions.cpp  MeasurementToolStartActions.h  ProcessingBuildInputActions.cpp  ProcessingBuildInputActions.h  ProcessingQueueActions.cpp  (+9 more)
tests/: domain_smoke.cpp
tools/: render_uml.ps1
